--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@mantine/hooks": "^7.6.2",
     "gql.tada": "^1.4.1",
     "graphql": "^16.8.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.7.1",
