--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "supergraph": "rover graph fetch se-ecom-demo@current --output ./src/schema.graphql"
   },
   "dependencies": {
     "@apollo/client": "^3.9.9",
