--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "supergraph": "rover graph fetch se-ecom-demo@current --output ./src/schema.graphql"
+    "supergraph": "rover graph fetch se-ecom-demo@current --output ./src/schema.graphql",
+    "check-operations": "apollo client:check --variant=current"
   },
   "dependencies": {
     "@apollo/client": "^3.9.9",
